--- a/themes/extensions/sass/main.scss
+++ b/themes/extensions/sass/main.scss
@@ -112,13 +112,12 @@ $light-blue: #45B2E6;
   padding: 15px;
 }
 
-#authors {
+#authors, #tags {
   list-style: none;
   margin: 0;
 
   li {
     float: left;
-    width: 20%;
 
     a {
       background: $light-gray;
@@ -135,4 +134,15 @@ $light-blue: #45B2E6;
       }
     }
   }
+}
+
+#authors li {
+  width: 20%;
+}
+
+#tags li .label {
+  background: $med-gray;
+  @include border-radius(0);
+  color: #666;
+  text-shadow: none;
 }
