Show the composer command for installing module versions

--- a/themes/addons/less/pages/addon.less
+++ b/themes/addons/less/pages/addon.less
@@ -39,3 +39,20 @@
     .icon-arrow-down { display: inline; }
   }
 }
+
+#versions {
+  .version {
+    .accordion-heading {
+      font-weight: bold;
+    }
+
+    pre {
+      background: none;
+      border-color: #EEE;
+      border-width: 0 0 1px 0;
+      color: #888;
+      margin: 0 -16px 0;
+      padding: 0 16px 9px 16px;
+    }
+  }
+}
