--- a/themes/addons/css/addons.css
+++ b/themes/addons/css/addons.css
@@ -6058,6 +6058,17 @@ body {
 #readme.collapsed .icon-arrow-down {
   display: inline;
 }
+#versions .version .accordion-heading {
+  font-weight: bold;
+}
+#versions .version pre {
+  background: none;
+  border-color: #EEE;
+  border-width: 0 0 1px 0;
+  color: #888;
+  margin: 0 -16px 0;
+  padding: 0 16px 9px 16px;
+}
 #author dl {
   margin-top: 0;
 }
