--- a/themes/addons/less/pages/addon.less
+++ b/themes/addons/less/pages/addon.less
@@ -53,6 +53,14 @@
       color: #888;
       margin: 0 -16px 0;
       padding: 0 16px 9px 16px;
+
+      // make room for clippy
+      .install-cmd {
+        float: left;
+        width: auto;
+        padding-right: 16px;
+      }
     }
+
   }
 }
