--- a/themes/addons/less/components.less
+++ b/themes/addons/less/components.less
@@ -130,3 +130,25 @@
   }
 }
 
+.install-box {
+  background: none;
+  border-color: #EEE;
+  border-width: 0 0 1px 0;
+  line-height: 40px;
+
+  & > * {
+    float: left;
+    display: inline-block;
+    vertical-align: middle;
+  }
+
+  pre {
+    color: #888;
+    background: none;
+    border: none;
+  }
+
+  .install-box-label {
+    margin-right: 5px;
+  }
+}
