--- a/themes/addons/less/pages/addon.less
+++ b/themes/addons/less/pages/addon.less
@@ -46,21 +46,13 @@
       font-weight: bold;
     }
 
-    pre {
-      background: none;
-      border-color: #EEE;
-      border-width: 0 0 1px 0;
-      color: #888;
-      margin: 0 -16px 0;
-      padding: 0 16px 9px 16px;
+  }
+}
 
-      // make room for clippy
-      .install-cmd {
-        float: left;
-        width: auto;
-        padding-right: 16px;
-      }
-    }
-
+#metadata {
+  dt {
+    clear: left;
+    float: left;
+    width: 100px;
   }
 }
