--- a/themes/addons/less/layout.less
+++ b/themes/addons/less/layout.less
@@ -50,3 +50,10 @@ body {
     width: 70%; // better readability for free-form text
   }
 }
+
+#footer {
+  margin-top: 2em;
+  text-align: center;
+  font-style: italic;
+  font-size: 12px;
+}
