--- a/themes/addons/css/addons.css
+++ b/themes/addons/css/addons.css
@@ -6003,8 +6003,7 @@ body {
   padding-bottom: 20px;
 }
 #header {
-  border-bottom: 1px solid #eeeeee;
-  padding: 30px 0;
+  padding: 30px 0 15px 0;
 }
 #header .navbar-inner {
   background: none;
