--- a/themes/addons/less/layout.less
+++ b/themes/addons/less/layout.less
@@ -8,8 +8,7 @@ body {
 }
 
 #header {
-  border-bottom: 1px solid @grayLighter;
-  padding: 30px 0;
+  padding: 30px 0 15px 0;
 
   .navbar-inner {
     background: none;
