--- a/themes/addons/less/components.less
+++ b/themes/addons/less/components.less
@@ -19,6 +19,47 @@
   }
 }
 
+.add-ons {
+  h3 {
+    font-weight: 300;
+
+    i {
+      padding-right: 12px;
+    }
+  }
+}
+
+.table-addons {
+  margin-top: 16px;
+}
+
+.addons-list-type {
+  overflow: hidden;
+  clear: both;
+
+  a {
+    dispaly: block;
+    float: right;
+    width: 20px;
+    margin-right: 15px;
+
+    &:hover {
+      text-decoration: none;
+      color: #dedede;
+    }
+
+    &.current {
+      color: #dedede;
+    }
+  }
+
+  i {
+    width: 20px;
+    height: 20px;
+    font-size: 1.4em;
+  }
+}
+
 .addons-box {
   margin-top: 16px;
 
@@ -66,6 +107,50 @@
         text-overflow: ellipsis;
         white-space: nowrap;
       }
+    }
+  }
+
+  .addons-box-holder {
+    border: 2px solid @grayLighter;
+    border-top-width: 0;
+    margin: 0;
+    border-top: 1px solid @grayLighter;
+    padding: 8px;
+    overflow: hidden;
+
+    .placeholder {
+      float: left;
+      width: 150px;
+      height: 150px;
+      overflow: hidden;
+      border: 1px solid @grayLighter;
+      margin-right: 10px;
+      background: url(../images/logo-placeholder.png) top left no-repeat;
+      text-align: center;
+
+      &.img {
+        background: none;
+        border: 0;
+      }
+    }
+
+    .version {
+      float: left;
+      width: 37%;
+      color: #777;
+    }
+
+    .meta {
+      float: right;
+      width: 25%;
+      text-align: right;
+      margin-bottom: 1px;
+    }
+
+    .description {
+      display: block;
+      clear: right;
+      margin: 35px 0 0 162px;
     }
   }
 }
