Fixed view mode icon colours

--- a/themes/addons/less/components.less
+++ b/themes/addons/less/components.less
@@ -38,18 +38,19 @@
   clear: both;
 
   a {
-    dispaly: block;
+    display: block;
     float: right;
     width: 20px;
     margin-right: 15px;
+    color: #dedede;
 
     &:hover {
       text-decoration: none;
-      color: #dedede;
+      color: #1aa8eb;
     }
 
     &.current {
-      color: #dedede;
+      color: #1aa8eb;
     }
   }
 
