updated composer, added timeout and ss.org live url, fixed search box styling issue

--- a/themes/addons/css/addons.css
+++ b/themes/addons/css/addons.css
@@ -6194,3 +6194,9 @@ body {
 #home-search {
   margin-top: 16px;
 }
+
+#navWrapper .gsc-input input.gsc-input {
+  outline: none;
+  line-height: inherit;
+  height: auto;
+}
