FIX: Fix font-loading on HTTPS

--- a/themes/addons/less/base.less
+++ b/themes/addons/less/base.less
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);
+@import url(//fonts.googleapis.com/css?family=PT+Sans:400,700);
 
 hr {
   border-top-width: 5px;
