FIX Remove white text shadow and composer update toolbar

--- a/themes/addons/less/layout.less
+++ b/themes/addons/less/layout.less
@@ -43,6 +43,13 @@ body {
   }
 }
 
+#navWrapper {
+  .navbar .nav > li > a {
+    // Remove white text shadow on links
+    text-shadow: inherit;
+  }
+}
+
 #layout {
   .content-narrow {
     width: 70%; // better readability for free-form text
