Tweak Command Copy action to notify screen readers

--- a/themes/addons/less/components.less
+++ b/themes/addons/less/components.less
@@ -251,12 +251,14 @@
 
   &__confirmation {
     color: #1d8c30;
+    display: none;
     font-size: 12px;
     margin-left: 10px;
     opacity: 0;
     transition: opacity .2s;
 
     .copy-field__button--triggered ~ & {
+      display: block;
       opacity: 1;
     }
   }
