Update toolbar and add search modal include, remove duplicate modal CSS, remove additional jquery

--- a/themes/addons/less/forms.less
+++ b/themes/addons/less/forms.less
@@ -8,3 +8,23 @@
     right: 0;
   }
 }
+
+.modal-search {
+  .modal-header {
+    box-sizing: border-box;
+  }
+
+  .search-form {
+    box-sizing: border-box;
+    margin-bottom: 0;
+  }
+
+  .search-form__input {
+    box-shadow: none;
+    margin-bottom: 0;
+
+    &:focus {
+      box-shadow: none;
+    }
+  }
+}
